--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: ruby
 rvm:
-  - 2.2.1
-  - 2.1.5
+  - ruby-head
+  - 2.2.x
+  - 2.1.x
+  - 2.0.0
   - 1.9.3
+  - jruby-head
   - jruby-19mode
 before_script:
   - export CODECLIMATE_REPO_TOKEN=6896163b337c75e1bfc2ce916ff957c7b30b3196fb28b0c0535e9775cae189a7
