--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 rvm:
   - ruby-head
-  - 2.2.2
-  - 2.1.6
+  - 2.2
+  - 2.1
   - 1.9.3
-  - jruby-19mode
+  - jruby
 before_script:
   - export CODECLIMATE_REPO_TOKEN=593e1a9d737b016a64d59eeb26f3b934aaec8d958fdd0bf45abdc69d37ae915e
